--- a/todo-more-infomation/package.json
+++ b/todo-more-infomation/package.json
@@ -17,7 +17,9 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@tailwindcss/vite": "^4.1.3",
     "react": "^19.0.0",
+    "react-day-picker": "^9.6.5",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.5.0",
     "tailwindcss": "^4.1.3",
     "zustand": "^5.0.3"
   },
