--- a/todo-more-infomation/package.json
+++ b/todo-more-infomation/package.json
@@ -16,6 +16,8 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@tailwindcss/vite": "^4.1.3",
+    "@tanstack/react-query": "^5.74.3",
+    "ky": "^1.8.1",
     "react": "^19.0.0",
     "react-day-picker": "^9.6.5",
     "react-dom": "^19.0.0",
